# internal/entity/codes.go
@@ -6,14 +6,10 @@ type ResponseCode int
 // could be business errors e.g order not found or any infrastructure error
 const (
 	SuccessCode ResponseCode = iota + 1000
-)
-
-const (
-	BadRequestCode ResponseCode = iota + 4000
+	BadRequestCode
 	UnauthorizedCode
+	FileIsToLarge
 	ForbiddenCode
-)
-
-const (
-	InternalErrorCode ResponseCode = iota + 5000
+	NotFoundCode
+	InternalErrorCode
 )
